fix(buttons): make remove button smaller

--- a/src/styles/modules/buttons.scss
+++ b/src/styles/modules/buttons.scss
@@ -24,7 +24,7 @@
 }
 
 .button--small {
-    padding: ($base-spacing-unit / 2) $base-spacing-unit-small;
+    padding: ($base-spacing-unit / 2) $base-spacing-unit-tiny;
     font-size: 14px;
 }
 
